What's new in ZODB3 3.3 ?
=========================
Release date: DD-MMM-YYYY

Tools
-----

New tool fsoids.py, for heavy debugging of FileStorages; shows all
uses of specified oids in the entire database (e.g., suppose oid 0x345620
is missing -- did it ever exist?  if so, when?  who referenced it?  when
was the last transaction that modified an object that referenced it?
which objects did it reference?  what kind of object was it?).
ZODB/test/testfsoids.py is a tutorial doctest.


What's new in ZODB3 3.3 ?
=========================
Release date: DD-MMM-YYYY

Tools
-----

FileStorage.FileIterator was confused about how to read a transaction's
user and description fields, which caused several tools to display
binary gibberish for these values.

ZODB.utils.oid_repr() changed to add a leading "0x", and to strip leading
zeroes.  This is used, e.g., in the detail of a POSKeyError exception, to
identify the missing oid.  Before, the output was ambiguous.  For example,
oid 17 was displayed as 0000000000000011.  As a Python integer, that's
octal 9.  Or was it meant to be decimal 11?  Or was it meant to be hex?
Now it displays as 0x11.

fsrefs.py:

    When run with -v, produced tracebacks for objects whose creation was
    merely undone.  This was confusing.  Tracebacks are now produced only
    if there's "a real" problem loading an oid.

    If the current revision of object O refers to an object P whose
    creation has been undone, this is now identified as a distinct case.

    Captured and ignored most attempts to stop it via Ctrl+C.  Repaired.

    Now makes two passes, so that an accurate report can be given of all
    invalid references.

analyze.py produced spurious "len of unsized object" messages when
finding a data record for an object uncreation or version abort.  These
no longer appear.

fsdump.py's get_pickle_metadata() function (which is used by several
tools) was confused about what to do when the ZODB pickle started with